<resources>
    <string name="app_name">Knife&amp;Spoon</string>
    <string name="welcome_1">Ciao&#160;</string>
    <string name="welcome_2">Benvenuto su </string>
    <string name="register_1">È la prima volta che</string>
    <string name="register_2">ti vediamo da queste parti</string>
    <string name="register_3">Come ti chiami?</string>
    <string name="continua">Continua</string>
    <string name="login_with_google">Entra con Google</string>
    <string name="no_account_login">Entra senza account</string>
    <string name="heading_search">Ricerca</string>
    <string name="search_bar">Cerca...</string>
    <string name="add_ricetta">Aggiungi una ricetta</string>
    <string name="search_ricetta">Cerca una ricetta</string>
    <string name="settings">Impostazioni</string>
    <string name="menu">Menu</string>
    <string name="insert_foto">Inserisci una foto del piatto</string>

    <string name="ingredienti">Ingredienti</string>
    <string name="passaggi">Passaggi</string>
    <string name="ingrediente">Ingrediente</string>
    <string name="passaggio">Passaggio</string>
    <string name="nome_ingrediente">Nome ingrediente</string>
    <string name="rimuovi">Rimuovi</string>
    <string name="quantita">Quantità</string>
    <string name="unita_misura">Unità di misura</string>
    <string name="inserisci_descrizione_passaggio">Descrivi il passaggio</string>
    <string name="nuovo_ingrediente">Nuovo ingrediente</string>
    <string name="nuovo_passaggio">Nuovo Passaggio</string>
    <string name="numero_persone_ask">Numero persone</string>
    <string name="tempo_preparazione_ask">Tempo in minuti</string>
    <string name="error_message">Oops, qualcosa è andato storto</string>
    <string name="success_message">Operazione effettuata</string>
    <string name="error_empty_thing">Questo campo non può essere vuoto.</string>
    <string name="error_no_passaggi_ingredienti">Per favore inserisci almeno un ingrediente e un passsaggio.</string>
    <string name="error_no_titolo">Per favore inserisci il titolo della ricetta.</string>
    <string name="error_no_tempo">Per favore inserisci il tempo di preparazione in minuti.</string>
    <string name="error_no_persone">Per favore inserisci il numero di porzioni.</string>
    <string name="made_by">Scritto da:&#160;</string>
    <string name="tempo_di_preparazione_text">Tempo di preparazione:&#160;</string>
    <string name="numero_di_persone_text">Per:&#160;</string>

    <string-array name="categoria">
        <item>Antipasto</item>
        <item>Primo</item>
        <item>Secondo</item>
        <item>Contorno</item>
        <item>Dolce</item>
    </string-array>


    <string-array name="unita_misura">
        <item>unità</item>
        <item>grammi</item>
        <item>kg</item>
        <item>bicchiere</item>
        <item>litri</item>
        <item>cucchiaio</item>
        <item>cucchiaino</item>
        <item>q.b.</item>
    </string-array>

    <string name="pubblica_ricetta">Pubblica la ricetta</string>
    <string name="ricetta_in_pubblicazione">La tua ricetta è stata inviata agli admin per la revisione</string>
    <string name="ricetta_in_pubblicazione_error">Si è verificato un errore nell\'invio della ricetta</string>

    <string name="error_empty_name">Il tuo nome è vuoto. Per favore, inserisci un nome.</string>
    <string name="error_name_space">Controlla il tuo nome, ci sono degli spazi dove non dovrebbero esserci.</string>
    <string name="error_ok">OK</string>
    <string name="error_name_already_taken">Questo nome è già stato usato. Per favore scegli un altro nome.</string>
    <string name="error_lenght_name">Il tuo nome deve essere compreso tra 6 e 20 caratteri.</string>
    <string name="error_not_all_permissions">Per favore, approva tutto.</string>
    <string name="selsorgente">Seleziona la sorgente.</string>


    <string name="title_activity_show_ricetta">Ricetta</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_insert_ricetta">Nome Ricetta</string>
</resources>
