<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".View.InsertRicettaActivity"
    tools:showIn="@layout/activity_insert_ricetta">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_activity_insert_ricetta"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etTitolo"
                android:background="@color/fui_transparent"
                android:maxLength="30"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/tempo_preparazione_ask">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTempoPreparazione"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/fui_transparent"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/numero_persone_ask">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNumeroPersone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/fui_transparent"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Categoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Categoria" />

            <Spinner
                android:id="@+id/spinnerCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="0dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/ingredienti" />

        <LinearLayout
            android:id="@+id/layoutIngredienti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical"/>

        <Button
            android:id="@+id/addIngrediente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingrediente"
            android:layout_gravity="end"
            android:layout_margin="16dp"
            android:drawableLeft="@drawable/ic_add_black_24dp"
            />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/passaggi"/>

        <LinearLayout
            android:id="@+id/listPassaggi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical"></LinearLayout>

        <Button
            android:id="@+id/addPassaggio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passaggio"
            android:layout_gravity="end"
            android:layout_margin="16dp"
            android:drawableLeft="@drawable/ic_add_black_24dp"
            />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>