<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".View.ShowRicettaActivity"
    tools:showIn="@layout/activity_show_ricetta">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:gravity="left|center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/pizza"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.43" />

            <LinearLayout
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtWrittenBy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/made_by"
                    android:textSize="15sp"
                    app:autoSizeMaxTextSize="100sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/txtAutore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTempoPreparazioneText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="0dp"
                android:text="@string/tempo_di_preparazione_text"
                android:textSize="20sp"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/txtTempoPreparazioneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtNumeroPersoneText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="0dp"
                android:text="@string/numero_di_persone_text"
                android:textSize="20sp"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/txtNumeroPersoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtShowIngredienti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/ingredienti"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/layoutIngredientiShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <TextView
            android:id="@+id/txtShowPassaggi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/passaggi"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/layoutPassaggiShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>